DP-2734 - Breadcrumbs - fixed wrapping issue

--- a/styleguide/source/assets/scss/03-organisms/_breadcrumbs.scss
+++ b/styleguide/source/assets/scss/03-organisms/_breadcrumbs.scss
@@ -88,6 +88,10 @@
           &:before {
             opacity: .5;
           }
+
+          a {
+            display: inline;
+          }
         }
       }
 
